# Jarv1s

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.py
docs/: api_reference.md  architecture.md  build_strategies.md  development_guide.md  git_workflow.md  project_overview.md  roadmap.md  setup_guide.md  technical_details.md
docs/results/: 01_investigacion_prototipo_inicial.md
interfaz/: package.json
scripts/: dev-fast.sh  dev-local.sh  docker-commands.md  docker-dev.sh  podman-dev.sh  rebuild-clean.sh  setup.py  validate_system.py
src/: main.py
src/api/: server.py
src/config/: __init__.py  settings.py
src/services/: llm_service.py  stt_service.py  tts_service.py
src/utils/: __init__.py  exceptions.py  logger.py
tests/: check_gpu.py  test_audio_input.py  test_full_loop.py  test_llm.py  test_tts.py  test_whisper.py  test_whisperx.py
